{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 181,
  "lineage": "9b02b94a-0992-625d-8e10-8355c5de781b",
  "resources": [
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-04984c3d47e5654a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04984c3d47e5654a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08ad7e7afd9c5cdc4"
              }
            ],
            "primary_network_interface_id": "eni-08ad7e7afd9c5cdc4",
            "private_dns": "ip-10-0-1-152.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_ip": "13.206.190.50",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9a61baf8a5e1d72",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d9179931bc94ab1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-project-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bc8de968e78e2cb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-04984c3d47e5654a2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_key_pair.my_key",
            "module.Dev-app.aws_security_group.my_sg",
            "module.Dev-app.aws_subnet.public_subnet",
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:internet-gateway/igw-00772a49c8fba33c7",
            "id": "igw-00772a49c8fba33c7",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-085543e519c1bead4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "igw-00772a49c8fba33c7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:route-table/rtb-07520b1f4737eee03",
            "id": "rtb-07520b1f4737eee03",
            "owner_id": "781813038209",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00772a49c8fba33c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-085543e519c1bead4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "rtb-07520b1f4737eee03",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_internet_gateway.my_igw",
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a33733574e7d47",
            "region": "ap-south-1",
            "route_table_id": "rtb-07520b1f4737eee03",
            "subnet_id": "subnet-08d9179931bc94ab1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "rtbassoc-011a33733574e7d47",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_internet_gateway.my_igw",
            "module.Dev-app.aws_route_table.my_rt",
            "module.Dev-app.aws_subnet.public_subnet",
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:security-group/sg-09bc8de968e78e2cb",
            "description": "Security Group for my ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bc8de968e78e2cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-project-sg",
            "name_prefix": "",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-project-sg"
            },
            "tags_all": {
              "Name": "dev-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-085543e519c1bead4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "sg-09bc8de968e78e2cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:subnet/subnet-08d9179931bc94ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d9179931bc94ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781813038209",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Name": "dev-public-subnet"
            },
            "vpc_id": "vpc-085543e519c1bead4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "subnet-08d9179931bc94ab1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Dev-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Dev-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:vpc/vpc-085543e519c1bead4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c45859d6c7aed142",
            "default_route_table_id": "rtb-0c659a6a00de590b1",
            "default_security_group_id": "sg-08cf7a5bdd0c334c9",
            "dhcp_options_id": "dopt-0a1f0284c55d29301",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085543e519c1bead4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c659a6a00de590b1",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "vpc-085543e519c1bead4",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-00ff9d50879526dad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ff9d50879526dad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ea90b05ea3f6291c"
              }
            ],
            "primary_network_interface_id": "eni-0ea90b05ea3f6291c",
            "private_dns": "ip-10-0-1-234.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_ip": "65.2.9.189",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064d38ce1c413a93e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f28471246beb5a0",
            "tags": {
              "Environment": "prod",
              "Name": "prod-project-ec2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005061fe47aa6e201"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-00ff9d50879526dad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_key_pair.my_key",
            "module.Prod-app.aws_security_group.my_sg",
            "module.Prod-app.aws_subnet.public_subnet",
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-0bfcef93316277ca2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfcef93316277ca2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0190bd9fb644a1e10"
              }
            ],
            "primary_network_interface_id": "eni-0190bd9fb644a1e10",
            "private_dns": "ip-10-0-1-106.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_ip": "3.110.225.107",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008c8469edce7f17a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f28471246beb5a0",
            "tags": {
              "Environment": "prod",
              "Name": "prod-project-ec2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005061fe47aa6e201"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-0bfcef93316277ca2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_key_pair.my_key",
            "module.Prod-app.aws_security_group.my_sg",
            "module.Prod-app.aws_subnet.public_subnet",
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:internet-gateway/igw-00eea942b293c9439",
            "id": "igw-00eea942b293c9439",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-086161502f1614b50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "igw-00eea942b293c9439",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:route-table/rtb-099d04f6ed4512f3f",
            "id": "rtb-099d04f6ed4512f3f",
            "owner_id": "781813038209",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00eea942b293c9439",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt"
            },
            "tags_all": {
              "Name": "prod-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086161502f1614b50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "rtb-099d04f6ed4512f3f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_internet_gateway.my_igw",
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02461af570838316b",
            "region": "ap-south-1",
            "route_table_id": "rtb-099d04f6ed4512f3f",
            "subnet_id": "subnet-04f28471246beb5a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "rtbassoc-02461af570838316b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_internet_gateway.my_igw",
            "module.Prod-app.aws_route_table.my_rt",
            "module.Prod-app.aws_subnet.public_subnet",
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:security-group/sg-005061fe47aa6e201",
            "description": "Security Group for my ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005061fe47aa6e201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-project-sg",
            "name_prefix": "",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-project-sg"
            },
            "tags_all": {
              "Name": "prod-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086161502f1614b50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "sg-005061fe47aa6e201",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:subnet/subnet-04f28471246beb5a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f28471246beb5a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781813038209",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-public-subnet"
            },
            "tags_all": {
              "Name": "prod-public-subnet"
            },
            "vpc_id": "vpc-086161502f1614b50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "subnet-04f28471246beb5a0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Prod-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:vpc/vpc-086161502f1614b50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fe7f6180cedc9fa",
            "default_route_table_id": "rtb-0f171fa3cf772e2de",
            "default_security_group_id": "sg-037eb3685bd593c54",
            "dhcp_options_id": "dopt-0a1f0284c55d29301",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086161502f1614b50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f171fa3cf772e2de",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "vpc-086161502f1614b50",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.Stage-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-0bc8ade6f37edbda2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc8ade6f37edbda2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0464ffb4108cf5f7d"
              }
            ],
            "primary_network_interface_id": "eni-0464ffb4108cf5f7d",
            "private_dns": "ip-10-0-1-41.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_ip": "13.206.188.149",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074fc3b6dd9532a63",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092306c248a86c36c",
            "tags": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09379898ed5108d97"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-0bc8ade6f37edbda2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Stage-app.aws_key_pair.my_key",
            "module.Stage-app.aws_security_group.my_sg",
            "module.Stage-app.aws_subnet.public_subnet",
            "module.Stage-app.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-06a972cf1a0c54700",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a972cf1a0c54700",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a2aac4ce212f646b"
              }
            ],
            "primary_network_interface_id": "eni-0a2aac4ce212f646b",
            "private_dns": "ip-10-0-1-222.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.222",
            "public_ip": "65.1.132.194",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fc274cbd648f6e64",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092306c248a86c36c",
            "tags": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09379898ed5108d97"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-06a972cf1a0c54700",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Stage-app.aws_key_pair.my_key",
            "module.Stage-app.aws_security_group.my_sg",
            "module.Stage-app.aws_subnet.public_subnet",
            "module.Stage-app.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:781813038209:instance/i-06d6e4041433c7410",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d6e4041433c7410",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b17c2cf51bde3bdb"
              }
            ],
            "primary_network_interface_id": "eni-0b17c2cf51bde3bdb",
            "private_dns": "ip-10-0-1-29.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "13.126.244.15",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b51c48ea6db4232",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092306c248a86c36c",
            "tags": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09379898ed5108d97"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "i-06d6e4041433c7410",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Stage-app.aws_key_pair.my_key",
            "module.Stage-app.aws_security_group.my_sg",
            "module.Stage-app.aws_subnet.public_subnet",
            "module.Stage-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Stage-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:security-group/sg-09379898ed5108d97",
            "description": "Security Group for my ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09379898ed5108d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stage-project-sg",
            "name_prefix": "",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-project-sg"
            },
            "tags_all": {
              "Name": "stage-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7028e4eeef0dd7d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "sg-09379898ed5108d97",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Stage-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Stage-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:subnet/subnet-092306c248a86c36c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092306c248a86c36c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781813038209",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "stage-public-subnet"
            },
            "tags_all": {
              "Name": "stage-public-subnet"
            },
            "vpc_id": "vpc-0c7028e4eeef0dd7d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "subnet-092306c248a86c36c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Stage-app.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Stage-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781813038209:vpc/vpc-0c7028e4eeef0dd7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d8a41241ab82c56",
            "default_route_table_id": "rtb-0bdd334126475617c",
            "default_security_group_id": "sg-00cdd7d6f5da297d4",
            "dhcp_options_id": "dopt-0a1f0284c55d29301",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7028e4eeef0dd7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdd334126475617c",
            "owner_id": "781813038209",
            "region": "ap-south-1",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781813038209",
            "id": "vpc-0c7028e4eeef0dd7d",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}